# IntegralConfig

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  library.json
.cache/clangd/index/: hello_test.cpp.D612EC257A5A4D00.idx  integral_config.cpp.38D118CEC78CA1C0.idx  integral_config.h.667BC02167B8F68C.idx  main.cpp.7E1BF0DDA485803C.idx
.github/workflows/: ci.yml
examples/desktop/: main.cpp
include/: Configuration.h  ConfigurationController.h  DefaultMessagePayloads.h  MPackArray.h  MPackHeader.h  MPackObject.hpp  MPackObjectBase.h  MPackObjectMember.h  MPackObjectType.h  MessagePayloadRegistry.h  Messages.h  SettingValues.h  communication.h  configuration-controller.h  configuration.h  integral_config.h  messages.h  messages.hpp  mpack-array.h  mpack-header.h  mpack-object-base.h  mpack-object-type.h  mpack-object.h  mpack-object.hpp  setting-values.h
include/mpack/: MpackMessageReader.h  mpac-config.h  mpack-common.h  mpack-expect.h  mpack-node.h  mpack-platform.h  mpack-reader.h  mpack-writer.h  mpack.h
src/: DefaultMessagePayloads.cpp  MPackObjectBase.cpp  MessagePayloadRegistry.cpp  communicaton.cpp  configuration-controller.cpp  integral_config.cpp  mpack-object-base.cpp  mpack-object.cpp
src/mpack/: mpack-common.c  mpack-expect.c  mpack-node.c  mpack-platform.c  mpack-reader.c  mpack-writer.c
tests/: hello_test.cpp  int-tests.cpp
tests/configuration-tests/: ConfigurationControllerTests.cpp
tests/objects/: ArrayObjects.h  FloatObjects.h  IntObjects.h  MixedObjects.h  ObjectObjects.h  StringObjects.h  array-objects.h
tests/read-tests/: array-tests.cpp  float-tests.cpp  int-tests.cpp  mixed-object-tests.cpp  object-tests.cpp  string-tests.cpp
tests/write-tests/: array-tests.cpp  float-tests.cpp  int-tests.cpp  message-tests.cpp  string-tests.cpp
